Added link section to web pages
And made '/home' redirect to '/'.

--- a/flask-https-server/templates/index.html
+++ b/flask-https-server/templates/index.html
@@ -18,10 +18,13 @@
 </head>
 
 <body>
-    <h1>Welcome to the Homepage</h1>
+    <h1>{{ welcome_message }}</h1>
 
     <ul>
+        <li><a href="/">Root</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
         <li><a href="/logout">Logout</a></li>
         <li><a href="/server_status">Server Status</a></li>
         <li><a href="/visualize">Visualize</a></li>
