--- a/flask-https-server/templates/userlist.html
+++ b/flask-https-server/templates/userlist.html
@@ -5,6 +5,19 @@
     <title>User List</title>
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="/">Root</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li><a href="/server_status">Server Status</a></li>
+            <li><a href="/visualize">Visualize</a></li>
+            <li><a href="/userlist">User List</a></li>
+        </ul>
+    </div>
+
     <table border="1">
         <thead>
             <tr>
