--- a/flask-https-server/templates/login.html
+++ b/flask-https-server/templates/login.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <div>
+        <ul>
+            <li><a href="/">Root</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li><a href="/server_status">Server Status</a></li>
+            <li><a href="/visualize">Visualize</a></li>
+            <li><a href="/userlist">User List</a></li>
+        </ul>
+    </div>
+
+
+    <div>
         <h2>Login</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
