--- a/flask-https-server/templates/visualize.html
+++ b/flask-https-server/templates/visualize.html
@@ -6,6 +6,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.0/cytoscape.min.js"></script>
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="/">Root</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li><a href="/server_status">Server Status</a></li>
+            <li><a href="/visualize">Visualize</a></li>
+            <li><a href="/userlist">User List</a></li>
+        </ul>
+    </div>
+
     <div id="cy" style="width: 100%; height: 1000px;"></div>
 
     <script>
