Added more html templates

--- a/flask-https-server/templates/activate_api_key.html
+++ b/flask-https-server/templates/activate_api_key.html
@@ -24,45 +24,39 @@
     </div>
 
     <div>
-        <h2>Register</h2>
-        <form id="registrationForm">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+        <h2>Add API key for user {{username}}</h2>
+        <form id="activateAPIKey">
+            <label for="api_key">API Key:</label>
+            <input type="text" id="api_key" name="api_key" required>
             <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <label for="invite">Invitation Code:</label>
-            <input type="text" id="invite" name="invite" required>
-            <br>
-            <input type="submit" value="Register">
+            <input type="submit" value="Activate API Key">
         </form>
-        <div id="response"></div>
+        <div>
+            <div><div>Response:</div><div id="response"></div></div>
+        </div>
     </div>
 
     <script>
         $(document).ready(function(){
-            $("#registrationForm").submit(function(event){
+            $("#activateAPIKey").submit(function(event){
                 event.preventDefault();
 
                 var formData = {
-                    "username": $("#username").val(),
-                    "password": $("#password").val(),
-                    "invitation_code": $("#invite").val()
+                    "api_key": $("#api_key").val(),
+                    "lan_ip_address": "test",
+                    "remote_ip_address": "test",
+                    "node_port": "test",
+                    "public_key": "test"
                 };
 
                 $.ajax({
                     type: "POST",
-                    url: "/register",
+                    url: "/activate_api_key",
                     data: JSON.stringify(formData),
                     contentType: "application/json",
                     dataType: "json",
                     success: function(response, textStatus, xhr) {
-                        if (xhr.status == 200) {
-                            window.location.href = "/login";
-                        } else {
-                            $("#response").text(response.message);
-                        }
+                        $("#response").text(response.message);
                     },
                     error: function(error){
                         $("#response").text(error.responseJSON.message);
