--- a/flask-https-server/templates/visualize.html
+++ b/flask-https-server/templates/visualize.html
@@ -16,6 +16,9 @@
             <li><a href="/server_status">Server Status</a></li>
             <li><a href="/visualize">Visualize</a></li>
             <li><a href="/userlist">User List</a></li>
+            <li><a href="/add_user_license">Add User License</a></li>
+            <li><a href="/request_api_key">Request API Key</a></li>
+            <li><a href="/activate_api_key">Activate API Key</a></li>
         </ul>
     </div>
 
