Changed links and added logout page

--- a/flask-https-server/templates/index.html
+++ b/flask-https-server/templates/index.html
@@ -21,8 +21,7 @@
     <h1>{{ welcome_message }}</h1>
 
     <ul>
-        <li><a href="/">Root</a></li>
-        <li><a href="/home">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Register</a></li>
         <li><a href="/logout">Logout</a></li>
