--- a/flask-https-server/templates/register.html
+++ b/flask-https-server/templates/register.html
@@ -9,8 +9,7 @@
 <body>
     <div>
         <ul>
-            <li><a href="/">Root</a></li>
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
             <li><a href="/logout">Logout</a></li>
@@ -58,11 +57,11 @@
                     contentType: "application/json",
                     dataType: "json",
                     success: function(response, textStatus, xhr) {
-                        if (xhr.status == 200) {
-                            window.location.href = "/login";
-                        } else {
-                            $("#response").text(response.message);
-                        }
+                        //if (xhr.status == 200) {
+                        //    window.location.href = "/login";
+                        //} else {
+                        $("#response").text(response.message);
+                        //}
                     },
                     error: function(error){
                         $("#response").text(error.responseJSON.message);
