--- a/flask-https-server/templates/request_api_key.html
+++ b/flask-https-server/templates/request_api_key.html
@@ -9,8 +9,7 @@
 <body>
     <div>
         <ul>
-            <li><a href="/">Root</a></li>
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
             <li><a href="/logout">Logout</a></li>
