Can define content security policy
Commented it out, though, because it blocks in-page scripts

--- a/flask-https-server/templates/login.html
+++ b/flask-https-server/templates/login.html
@@ -37,7 +37,7 @@
         <div id="response"></div>
     </div>
 
-    <script>
+    <script nonce="BLEP">
         $(document).ready(function(){
             $("#loginForm").submit(function(event){
                 event.preventDefault();
