Made all scripts static!
Improved security, as scripts cannot be injected inline due to the CSP.

--- a/flask-https-server/templates/add_user_license.html
+++ b/flask-https-server/templates/add_user_license.html
@@ -34,31 +34,6 @@
         <div id="response"></div>
     </div>
 
-    <script>
-        $(document).ready(function(){
-            $("#addLicenseForm").submit(function(event){
-                event.preventDefault();
-
-                var formData = {
-                    "license_name": $("#license_name").val(),
-                    "csrf_token": $("#csrf_token").val()
-                };
-
-                $.ajax({
-                    type: "POST",
-                    url: "/add_user_license",
-                    data: JSON.stringify(formData),
-                    contentType: "application/json",
-                    dataType: "json",
-                    success: function(response, textStatus, xhr) {
-                        $("#response").text(response.message);
-                    },
-                    error: function(error){
-                        $("#response").text(error.responseJSON.message);
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="{{url_for('static', filename='add_user_license.js')}}"></script>
 </body>
 </html>
