--- a/flask-https-server/templates/login.html
+++ b/flask-https-server/templates/login.html
@@ -37,35 +37,6 @@
         <div id="response"></div>
     </div>
 
-    <script nonce="BLEP">
-        $(document).ready(function(){
-            $("#loginForm").submit(function(event){
-                event.preventDefault();
-
-                var formData = {
-                    "username": $("#username").val(),
-                    "password": $("#password").val()
-                };
-
-                $.ajax({
-                    type: "POST",
-                    url: "/login",
-                    data: JSON.stringify(formData),
-                    contentType: "application/json",
-                    dataType: "json",
-                    success: function(response, textStatus, xhr) {
-                        if (xhr.status == 200) {
-                            window.location.href = "/home";
-                        } else {
-                            $("#response").text(response.message);
-                        }
-                    },
-                    error: function(error){
-                        $("#response").text(error.responseJSON.message);
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="{{ url_for('static', filename='login.js') }}"></script>
 </body>
 </html>
