--- a/flask-https-server/templates/request_api_key.html
+++ b/flask-https-server/templates/request_api_key.html
@@ -38,33 +38,6 @@
         </div>
     </div>
 
-    <script>
-        $(document).ready(function(){
-            $("#requestAPIKey").submit(function(event){
-                event.preventDefault();
-
-                var formData = {
-                    "license_name": $("#license_name").val(),
-                    "csrf_token": $("#csrf_token").val()
-                };
-
-                $.ajax({
-                    type: "POST",
-                    url: "/request_api_key",
-                    data: JSON.stringify(formData),
-                    contentType: "application/json",
-                    dataType: "json",
-                    success: function(response, textStatus, xhr) {
-                        $("#response").text(response.message);
-                        $("#api_key").text(response.api_key);
-                        $("#api_key_hash").text(response.api_key_hash);
-                    },
-                    error: function(error){
-                        $("#response").text(error.responseJSON.message);
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="{{url_for('static', filename='request_api_key.js')}}"></script>
 </body>
 </html>
