Email 2FA works!

--- a/flask-https-server/templates/register.html
+++ b/flask-https-server/templates/register.html
@@ -21,6 +21,9 @@
     <div>
         <h2>Register</h2>
         <form id="registrationForm">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <br>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <br>
